# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "soc_p7885/nnrt"
NPU_LIB_PATH="//device/soc/unisoc/p7885/hardware/npu"

ohos_unittest("nnrt_vdi_impl_unittest") {
  module_out_path = module_output_path

  sources = [ "unittest/src/nnrt_vdi_impl_test.cpp" ]

  include_dirs = [
    "//device/soc/unisoc/p7885/hardware/npu/nnrt/include",
    "${NPU_LIB_PATH}/include"
  ]

  deps = [ "//device/soc/unisoc/p7885/hardware/npu/nnrt:libnpu_vdi_impl" ]

  external_deps = [
    "ipc:ipc_single",
    "drivers_interface_nnrt:nnrt_idl_headers",
    "drivers_interface_nnrt:libnnrt_stub_2.0",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":nnrt_vdi_impl_unittest" ]
}
